--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -19,9 +19,14 @@
                 <p>Soy invitado</p>
             </a>
             </li>
-            <li class="nav-item" id="item-newevent">
-              <a class="nav-link" [routerLink]="['/new-event']">
+            <li class="nav-item" id="item-nuevo">
+              <a class="nav-link" [routerLink]="['/nuevo']">
                 <p>Nuevo evento</p>
+              </a>
+            </li>
+            <li class="nav-item" id="item-eventos">
+              <a class="nav-link" [routerLink]="['/eventos']">
+                <p>Mis eventos</p>
               </a>
             </li>
         </ul>
