--- a/src/app/eventos/admin/nuevo-evento.component.html
+++ b/src/app/eventos/admin/nuevo-evento.component.html
@@ -131,41 +131,51 @@
 
                             <div class="space-70"></div>
 
-                            <div class="form-inline">
-                                <angular2-multiselect 
-                                    [data]="listDeseos" 
-                                    [(ngModel)]="listDeseosSelected"  
-                                    [settings]="listDeseosSettings" 
-                                    (onSelect)="onDeseoSelec($event)" 
-                                    style="width:200px;"></angular2-multiselect>
-                                <button class="btn btn-primary btn-round mx-2" type="button" (click)="onClickAddDeseo()"><i class="now-ui-icons ui-1_simple-add mr-2"></i> Agregar deseo</button>
-                            </div>
+                            <h3 class="text-center border-bottom padding-">Deseos disponibles en tu evento</h3>
 
-                            <table class="table" *ngIf="nuevosDeseos?.length > 0">
-                                <thead>
-                                    <tr>
-                                        <th>Deseo</th>
-                                        <th>Valor en pesos</th>
-                                        <th>Acción</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr *ngFor="let d of nuevosDeseos; let i = index">
-                                        <td scope="row">{{d.nombre}}</td>
-                                        <td>
-                                            <div class="form-group mb-0">
-                                                <input type="text" class="form-control text-right" name="valor" id="valor" aria-describedby="helpId" placeholder="$ 0" 
-                                                    [(ngModel)]="d.valor"/>
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <button class="btn btn-danger btn-icon btn-round" (click)="eliminarFilaDeseo( d )">
-                                                <i class="fas fa-times"></i>
-                                            </button>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <div class="row">
+                                <div class="col-6 mx-auto">
+                                    <div class="form-inline">
+                                        <angular2-multiselect 
+                                            [data]="listDeseos" 
+                                            [(ngModel)]="listDeseosSelected"  
+                                            [settings]="listDeseosSettings" 
+                                            (onSelect)="onDeseoSelec($event)" 
+                                            style="width:60%;"></angular2-multiselect>
+                                        <button class="btn btn-primary btn-round mx-2" type="button" (click)="onClickAddDeseo()"><i class="now-ui-icons ui-1_simple-add mr-2"></i> Agregar deseo</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-6 mx-auto">
+
+                                    <table class="table" *ngIf="nuevosDeseos?.length > 0">
+                                        <thead>
+                                            <tr>
+                                                <th>Deseo</th>
+                                                <th>Valor en pesos</th>
+                                                <th>Acción</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr *ngFor="let d of nuevosDeseos; let i = index">
+                                                <td scope="row">{{d.nombre}}</td>
+                                                <td>
+                                                    <div class="form-group mb-0">
+                                                        <input type="text" class="form-control text-right" name="valor" id="valor" aria-describedby="helpId" placeholder="$ 0" 
+                                                            [(ngModel)]="d.valor"/>
+                                                    </div>
+                                                </td>
+                                                <td>
+                                                    <button class="btn btn-danger btn-icon btn-round" (click)="eliminarFilaDeseo( d )">
+                                                        <i class="fas fa-times"></i>
+                                                    </button>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
 
                         <!-- CUMPLEAÑOS 
@@ -183,7 +193,7 @@
                 </div>
             </div>
 
-            <div class="row justify-content-end">
+            <div class="row justify-content-center">
                 <button class="btn btn-primary btn-round" (click)="nextPage()" >Siguiente</button>
             </div>
 
@@ -198,16 +208,9 @@
             <h3 class="text-center border-bottom padding-">Agrega invitados a tu evento</h3>
             <div class="row">
                 <div class="col-6 mx-auto form-group">
-                    <label for="nombreInv">Nombres</label>
+                    <label for="nombreInv">Nombre</label>
                     <input type="text" class="form-control" id="nombreInv" name="nombreInv" aria-describedby="helpId" placeholder="Nombres" [(ngModel)]="nuevoInvitado.nombres" />
-                    <small id="helpId" class="form-text text-muted">Nombres de tu invitado</small>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-6 mx-auto form-group">
-                    <label for="apellidoInv">Apellidos</label>
-                    <input type="text" class="form-control" id="apellidoInv" name="apellidoInv" aria-describedby="helpId" placeholder="Apellidos" [(ngModel)]="nuevoInvitado.apellidos" email />
-                    <small id="helpId" class="form-text text-muted">Apellidos de tu invitado.</small>
+                    <small id="helpId" class="form-text text-muted">Nombre de tu invitado</small>
                 </div>
             </div>
             <div class="row">
@@ -234,7 +237,7 @@
                         </thead>
                         <tbody>
                             <tr *ngFor="let i of invitados">
-                                <td>{{ i.email }}</td>
+                                <td>{{ i.nombres }}</td>
                                 <td class="td-actions text-right">
                                     <button type="button" rel="tooltip" class="btn btn-danger btn-icon btn-round" (click)="removerInvitado( i )">
                                         <i class="now-ui-icons ui-1_simple-remove"></i>
