--- a/src/app/eventos/admin/editar-evento.component.html
+++ b/src/app/eventos/admin/editar-evento.component.html
@@ -1,3 +1,17 @@
-<p>
-  editar-evento works!
-</p>
+<div class="wrapper">
+  <!-- CABECERA -->
+  <div class="page-header page-header-xsmall">
+    <div class="page-header-image rellax-header" data-rellax-speed="-8"
+      style="background-image: url('assets/img/bg6.jpg'); transform: translate3d(0px, 0px, 0px);"></div>
+    <div class="content-center">
+      <div class="row">
+        <div class="col-md-8 ml-auto mr-auto">
+          <h1 class="title">Mis eventos</h1>
+          <h4>Modifica tus eventos</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+</div>
