--- a/src/app/eventos/admin/editar-evento.component.html
+++ b/src/app/eventos/admin/editar-evento.component.html
@@ -197,7 +197,7 @@
       <div class="div">
         <div class="row">
           <div class="col-12">
-            <button class="btn btn-dark btn-round" [routerLink]="['/home']">Regresar</button>
+            <button class="btn btn-dark btn-round" (click)="regresar()">Regresar</button>
           </div>
         </div>
       </div>
