--- a/src/app/eventos/invitado/evento-invitado.component.html
+++ b/src/app/eventos/invitado/evento-invitado.component.html
@@ -27,9 +27,9 @@
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <h3 class="card-title">{{ evento.nombre }}</h3>
+                    <h3 class="card-title">{{ evento.titulo }}</h3>
                     <p class="card-description">A realizarse el día {{ evento.fechaEvento | date:'dd MMMM yyyy' }} a las 
-                      {{ evento.horaEvento | date:'HH:mm'}},
+                      {{ evento.fechaEvento | date:'HH:mm'}},
                         en {{ evento.direccion }}. ¿Es correcta la información?
                         Ahora es tu turno de regalar tus mejores deseos. 
                     </p>
@@ -96,7 +96,7 @@
                 <div class="card card-plain card-blog">
                   <div class="row">
                     <div class="col-md-12">
-                      <h3 class="card-title">{{ evento.nombre }}</h3>
+                      <h3 class="card-title">{{ evento.titulo }}</h3>
                       <p class="card-description text-dark"><strong>
                         Regalarás {{ cantidadDeseo }} unidades de {{ deseoAsociado.nombre }} 
                         <br>con un valor total de {{ totalValor }}. </strong>
