--- a/src/assets/_custom-variables.scss
+++ b/src/assets/_custom-variables.scss
@@ -1,6 +1,6 @@
 // Overwrite Bootstrap's variables here
 
-$font-size-base: .75rem;
+$font-size-base: 1rem;
 $font-weight-bold: 500;
 
 $badge-padding-y: .5em;
