--- a/src/app/eventos/admin/editar-evento.component.html
+++ b/src/app/eventos/admin/editar-evento.component.html
@@ -100,7 +100,7 @@
                 <div class="col mx-auto form-group">
                   <label for="lugar">Tipo de cuenta</label>
                   <input type="text" class="form-control-plaintext font-weight-bold ml-3" name="lugar" id="lugar"
-                    aria-describedby="helpId" placeholder="Dirección" [value]="evento.tipoCuenta" />
+                    aria-describedby="helpId" placeholder="Dirección" [value]="evento.tipoCuenta.itemName" />
                   <small id="helpId" class="form-text text-muted">Tipo de cuenta, de la entidad financiera.</small>
                 </div>
               </div>
